[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "redclust-py"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = ["matplotlib>=3.7.5", "pyqt6>=6.7.1", "ipython~=8.29"]

[tool.maturin]
features = ["pyo3/extension-module"]
